2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Update of the PTile svn
	repository (now located at OSU).

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Fix a bug when processing programs
	with no loop.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch creates the options:
	--punroll
	--punroll-size
	--unroll-and-jam
	To control the new punroller module, that performs loop unrolling
	the CLAST.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c,
	* driver/src/Makefile.am,
	* driver/pocc/Makefile.am: Add new unrolling options.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Systematically compile the new
	punroller module.

	* driver/pocc/driver-pastops.c: Invoke the punroller module.

2011-07-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Minor fixes.

2011-07-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c: Use the CLAST vectorizer only
	with the CLAST back-end.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Link with the new pvectorizer module.
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Systematically integrate the new
	pvectorizer module.

	* driver/pocc/driver-pastops.c: Invoke the pvectorizer module when
	using --vectorizer with the PAST back-end.

2011-07-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Use the most generic past
	pretty-printer.
